--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
         <script src="shadow.js"></script>
+        <script src="objects.js"></script>
         <script src="test.js"></script>
         <title>Document</title>
     </head>
