--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
         <script src="shadow.js"></script>
         <script src="objects.js"></script>
+        <script src="drawing.js"></script>
         <script src="test.js"></script>
         <title>Document</title>
     </head>
